--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,23 +1,28 @@
+html, body {
+	background-color: #282c34;
+}
 .App {
-  text-align: center;
-	width: 100%;
+	text-align: center;
+	width: 70em;
+	margin: 4em auto;
+	background: #fff;
 }
 
 .App-logo {
-  height: 40vmin;
+	height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #09d3ac;
+	color: #09d3ac;
 }
